package App;

public enum Estado {

    DISPONIBLE, VENDIDO
}
